# mbedtls-SGX

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md  include
example/: CMakeLists.txt
example/enclave/: CMakeLists.txt  Log.h  pprint.c  s_client.c  s_server.c  ssl_conn_hdlr.cpp  ssl_conn_hdlr.h
example/untrusted/: CMakeLists.txt  Utils.cpp  m_server.cpp
ocall/: CMakeLists.txt  Makefile  aesni_ocalls.c  net_sockets_ocalls.c  std_ocalls.c
trusted/: CMakeLists.txt  Makefile  aesni_alt.c  glue.c  mbedtls_SGX.edl  mbedtls_compat_sgx.c  net_sockets_proxy.c  threading_alt.c
trusted/config/: config-sgx.h
trusted/include/: config-sgx.h  mbedtls_compat_sgx.h  threading_alt.h
trusted/mbedtls-2.6.0/configs/: config-sgx.h
trusted/mbedtls-2.6.0/include/: glue.h
